A push full of bugs commited for review.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,10 +8,10 @@
 		<script src="./js/ajaxdata.js" type="text/javascript" charset="utf-8"> </script> 
 		<script src="./js/libs/mustache.js" type="text/javascript" charset="utf-8"></script>
 		<script src="./js/libs/jquery-mustache/jquery.mustache.js" type="text/javascript" charset="utf-8"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<!-- Bootbox js for alert dialog in the style of bootstrap -->
 		<script src="./js/libs/bootbox.min.js" type="text/javascript" charset="utf-8"></script>
-
+		<script src="./js/index.js">
 	<!-- Jquery plugin for validating form data -->
 		<script src="./js/libs/jquery.validate-1.11.1.js" type="text/javascript" charset="utf-8"></script>
 	<meta charset="UTF-8">
