Push a working version of the project

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -26,8 +26,8 @@
 	</div>
 	<div class="realBody">	
 		<div class="col-lg-6" id="taskHolder" data-provide="ajax" data-template="messages" data-url="./to-doList">
-			
-			<script type="text/javascript">
+
+<!--			<script type="text/javascript">
 			$(document).ready(function(){
 				
 				$("#submit").click(function(){
@@ -37,7 +37,7 @@
 					$("#taskHolder").append(formatedTask);
 				});
 			});
-			</script>
+			</script> -->
 		</div>
 		<div class="col-lg-6">
 		<!--  	<form>-->
